// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Carousel Default renders correctly 1`] = `
<jest>
  <section
    aria-label="Carousel description here"
    aria-roledescription="carousel"
    class="ecl-carousel"
    data-ecl-auto-init="Carousel"
  >
    <div
      class="ecl-carousel__controls"
    >
      <div
        class="ecl-container"
      >
        <div
          class="ecl-carousel__autoplay"
        >
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__play ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Play carousel
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--play-outline ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default ecl-icon--play-outline"
                data-ecl-icon=""
              />
            </span>
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__pause ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Pause carousel
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--pause-outline ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default ecl-icon--pause-outline"
                data-ecl-icon=""
              />
            </span>
          </button>
        </div>
        <div
          class="ecl-carousel__navigation"
          role="tablist"
        >
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            1
          
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            2
          
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            3
          
          </button>
        </div>
      </div>
    </div>
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
      >
        <div
          aria-label="slide 1 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-1"
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
            </figure>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-1-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Lorem ipsum dolor sit amet
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-1-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-1-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-dark ecl-banner--color-light ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-2"
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
                data-ecl-banner-footer=""
              >
                <div
                  class="ecl-container"
                >
                  © Copyright or credit
                </div>
              </footer>
            </figure>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-2-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Duis vitae pulvinar turpis
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-2-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-2-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-dark ecl-banner--color-light ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-3"
          >
            <div
              class="ecl-banner__video-container"
            >
              <video
                autoplay=""
                class="ecl-video ecl-banner__video"
                data-ecl-banner-video=""
                loop=""
                muted=""
                playsinline=""
                poster="https://vod.prd.commavservices.eu/12/224712/THUMB_I224712EN1W_V_1.jpg"
              >
                <source
                  src="https://vod.prd.commavservices.eu/01/275521/019813ec-13ce-7136-ac0d-d7e24fec64c0/1080p-qaa.mp4"
                  type="video/mp4"
                />
              </video>
              <button
                class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__play ecl-button--icon-only"
                data-ecl-banner-play=""
                type="button"
              >
                <span
                  class="ecl-button__container"
                >
                  <span
                    class="ecl-button__label"
                    data-ecl-label="true"
                  >
                    Play
                  </span>
                  <span
                    aria-hidden="true"
                    class="wt-icon--play-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--play-outline"
                    data-ecl-icon=""
                  />
                </span>
              </button>
              <button
                class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__pause ecl-button--icon-only"
                data-ecl-banner-pause=""
                type="button"
              >
                <span
                  class="ecl-button__container"
                >
                  <span
                    class="ecl-button__label"
                    data-ecl-label="true"
                  >
                    Pause
                  </span>
                  <span
                    aria-hidden="true"
                    class="wt-icon--pause-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--pause-outline"
                    data-ecl-icon=""
                  />
                </span>
              </button>
            </div>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-3-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Donec maximus pharetra ex a ultricies
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-3-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-3-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Carousel Default renders correctly with extra attributes 1`] = `
<jest>
  <section
    aria-label="Carousel description here"
    aria-roledescription="carousel"
    class="ecl-carousel"
    data-ecl-auto-init="Carousel"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-carousel__controls"
    >
      <div
        class="ecl-container"
      >
        <div
          class="ecl-carousel__autoplay"
        >
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__play ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Play carousel
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--play-outline ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default ecl-icon--play-outline"
                data-ecl-icon=""
              />
            </span>
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__pause ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Pause carousel
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--pause-outline ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default ecl-icon--pause-outline"
                data-ecl-icon=""
              />
            </span>
          </button>
        </div>
        <div
          class="ecl-carousel__navigation"
          role="tablist"
        >
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            1
          
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            2
          
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            3
          
          </button>
        </div>
      </div>
    </div>
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
      >
        <div
          aria-label="slide 1 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-1"
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
            </figure>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-1-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Lorem ipsum dolor sit amet
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-1-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-1-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-dark ecl-banner--color-light ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-2"
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
                data-ecl-banner-footer=""
              >
                <div
                  class="ecl-container"
                >
                  © Copyright or credit
                </div>
              </footer>
            </figure>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-2-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Duis vitae pulvinar turpis
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-2-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-2-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-dark ecl-banner--color-light ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-3"
          >
            <div
              class="ecl-banner__video-container"
            >
              <video
                autoplay=""
                class="ecl-video ecl-banner__video"
                data-ecl-banner-video=""
                loop=""
                muted=""
                playsinline=""
                poster="https://vod.prd.commavservices.eu/12/224712/THUMB_I224712EN1W_V_1.jpg"
              >
                <source
                  src="https://vod.prd.commavservices.eu/01/275521/019813ec-13ce-7136-ac0d-d7e24fec64c0/1080p-qaa.mp4"
                  type="video/mp4"
                />
              </video>
              <button
                class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__play ecl-button--icon-only"
                data-ecl-banner-play=""
                type="button"
              >
                <span
                  class="ecl-button__container"
                >
                  <span
                    class="ecl-button__label"
                    data-ecl-label="true"
                  >
                    Play
                  </span>
                  <span
                    aria-hidden="true"
                    class="wt-icon--play-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--play-outline"
                    data-ecl-icon=""
                  />
                </span>
              </button>
              <button
                class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__pause ecl-button--icon-only"
                data-ecl-banner-pause=""
                type="button"
              >
                <span
                  class="ecl-button__container"
                >
                  <span
                    class="ecl-button__label"
                    data-ecl-label="true"
                  >
                    Pause
                  </span>
                  <span
                    aria-hidden="true"
                    class="wt-icon--pause-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--pause-outline"
                    data-ecl-icon=""
                  />
                </span>
              </button>
            </div>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-3-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Donec maximus pharetra ex a ultricies
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-3-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-3-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Carousel Default renders correctly with extra class names 1`] = `
<jest>
  <section
    aria-label="Carousel description here"
    aria-roledescription="carousel"
    class="ecl-carousel custom-class custom-class--test"
    data-ecl-auto-init="Carousel"
  >
    <div
      class="ecl-carousel__controls"
    >
      <div
        class="ecl-container"
      >
        <div
          class="ecl-carousel__autoplay"
        >
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__play ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Play carousel
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--play-outline ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default ecl-icon--play-outline"
                data-ecl-icon=""
              />
            </span>
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__pause ecl-button--icon-only"
            type="button"
          >
            <span
              class="ecl-button__container"
            >
              <span
                class="ecl-button__label"
                data-ecl-label="true"
              >
                Pause carousel
              </span>
              <span
                aria-hidden="true"
                class="wt-icon--pause-outline ecl-icon ecl-icon--m ecl-button__icon ecl-carousel__icon-default ecl-icon--pause-outline"
                data-ecl-icon=""
              />
            </span>
          </button>
        </div>
        <div
          class="ecl-carousel__navigation"
          role="tablist"
        >
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            1
          
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            2
          
          </button>
          <button
            class="ecl-button ecl-button--tertiary ecl-button--neutral ecl-carousel__navigation-item"
            role="tab"
          >
            
            3
          
          </button>
        </div>
      </div>
    </div>
    <div
      class="ecl-carousel__container"
    >
      <div
        class="ecl-carousel__slides"
      >
        <div
          aria-label="slide 1 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-light ecl-banner--color-dark ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-1"
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
            </figure>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-1-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Lorem ipsum dolor sit amet
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-1-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-1-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 2 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-dark ecl-banner--color-light ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-2"
          >
            <figure
              class="ecl-banner__picture-container"
            >
              <picture
                class="ecl-picture ecl-banner__picture"
                data-ecl-banner-image=""
              >
                <img
                  alt="Alternative text"
                  class="ecl-banner__image"
                  src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
                />
              </picture>
              <footer
                class="ecl-banner__credit"
                data-ecl-banner-footer=""
              >
                <div
                  class="ecl-container"
                >
                  © Copyright or credit
                </div>
              </footer>
            </figure>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-2-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Duis vitae pulvinar turpis
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-2-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-2-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          aria-label="slide 3 of 3"
          aria-roledescription="slide"
          class="ecl-carousel__slide"
          role="tabpanel"
        >
          <section
            class="ecl-banner ecl-banner--m ecl-banner--font-m ecl-banner--font-weight-light ecl-banner--box-bg-dark ecl-banner--color-light ecl-banner--h-left ecl-banner--v-center"
            data-ecl-auto-init="Banner"
            data-ecl-banner=""
            id="carousel-example-3"
          >
            <div
              class="ecl-banner__video-container"
            >
              <video
                autoplay=""
                class="ecl-video ecl-banner__video"
                data-ecl-banner-video=""
                loop=""
                muted=""
                playsinline=""
                poster="https://vod.prd.commavservices.eu/12/224712/THUMB_I224712EN1W_V_1.jpg"
              >
                <source
                  src="https://vod.prd.commavservices.eu/01/275521/019813ec-13ce-7136-ac0d-d7e24fec64c0/1080p-qaa.mp4"
                  type="video/mp4"
                />
              </video>
              <button
                class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__play ecl-button--icon-only"
                data-ecl-banner-play=""
                type="button"
              >
                <span
                  class="ecl-button__container"
                >
                  <span
                    class="ecl-button__label"
                    data-ecl-label="true"
                  >
                    Play
                  </span>
                  <span
                    aria-hidden="true"
                    class="wt-icon--play-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--play-outline"
                    data-ecl-icon=""
                  />
                </span>
              </button>
              <button
                class="ecl-button ecl-button--tertiary ecl-button--m ecl-button--neutral ecl-banner__pause ecl-button--icon-only"
                data-ecl-banner-pause=""
                type="button"
              >
                <span
                  class="ecl-button__container"
                >
                  <span
                    class="ecl-button__label"
                    data-ecl-label="true"
                  >
                    Pause
                  </span>
                  <span
                    aria-hidden="true"
                    class="wt-icon--pause-outline ecl-icon ecl-icon--m ecl-button__icon ecl-icon--pause-outline"
                    data-ecl-icon=""
                  />
                </span>
              </button>
            </div>
            <div
              class="ecl-container ecl-banner__info"
            >
              <div
                class="ecl-banner__container"
                data-ecl-banner-container=""
              >
                <div
                  class="ecl-banner__content"
                >
                  <div
                    class="ecl-banner__title"
                    id="carousel-example-3-title"
                  >
                    <span
                      class="ecl-banner__title-text"
                    >
                      Donec maximus pharetra ex a ultricies
                    </span>
                  </div>
                  <p
                    class="ecl-banner__description"
                    id="carousel-example-3-description"
                  >
                    <span
                      class="ecl-banner__description-text"
                    >
                      Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies
                    </span>
                  </p>
                  <div
                    class="ecl-banner__cta"
                  >
                    <a
                      aria-describedby="carousel-example-3-title"
                      class="ecl-link ecl-link--primary-highlight ecl-link--icon ecl-banner__link-cta"
                      href="/example"
                    >
                      <span
                        class="ecl-link__label"
                      >
                        Subscribe
                      </span>
                      <span
                        aria-hidden="true"
                        class="wt-icon--corner-arrow ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon ecl-icon--corner-arrow"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </section>
</jest>
`;
